--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
         "clean-webpack-plugin": "^4.0.0",
         "cross-env": "^7.0.3",
         "css-loader": "^7.1.2",
+        "cypress": "^13.17.0",
         "eslint": "^9.22.0",
         "eslint-config-react": "^1.1.7",
         "eslint-import-resolver-typescript": "^4.2.2",
@@ -126,8 +127,7 @@
         "wait-on": "^8.0.3",
         "webpack": "^5.98.0",
         "webpack-cli": "^6.0.1",
-        "webpack-dev-server": "^5.2.0",
-        "cypress": "^13.0.0"
+        "webpack-dev-server": "^5.2.0"
     },
     "dependencies": {
         "@concord-consortium/codap-plugin-api": "^0.1.7",
