--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,35 +23,38 @@ jobs:
   cypress:
     runs-on: ubuntu-latest
     strategy:
+      # when one test fails, DO NOT cancel the other
+      # containers, because this will kill Cypress processes
+      # leaving the Dashboard hanging ...
+      # https://github.com/cypress-io/github-action/issues/48
       fail-fast: false
       matrix:
+        # run 3 copies of the current job in parallel
         containers: [1, 2, 3]
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-
-      - name: Setup Node
-        uses: actions/setup-node@v4
-        with:
-          node-version: '18' # or whatever you're using
-
-      - name: Install Dependencies
-        run: npm ci
-
-      - name: Run Cypress Tests
-        uses: cypress-io/github-action@v6
+      - uses: cypress-io/github-action@v6
         with:
           start: npm start
           wait-on: 'http://localhost:8080'
-          working-directory: . # change this if Cypress is in a subfolder
+          # only record the results to dashboard.cypress.io if CYPRESS_RECORD_KEY is set
           record: ${{ !!secrets.CYPRESS_RECORD_KEY }}
+          # only do parallel if we have a record key
           parallel: ${{ !!secrets.CYPRESS_RECORD_KEY }}
         env:
+          # pass the Dashboard record key as an environment variable
           CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
+          # pass GitHub token to allow accurately detecting a build vs a re-run build
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          # turn on code coverage when running npm start
+          # so far we've been using a webpack coverage-istanbul-loader for this
+          # but there has been work on using the code coverage support in the browser directly,
+          # which should be much faster
           CODE_COVERAGE: true
+          # Also turn on the code coverage tasks in cypress itself, these are disabled
+          # by default.
           CYPRESS_coverage: true
-
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v4
         with:
